--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mysql2": "^3.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
