--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Siddharth",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
