--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.33.0",
+    "sequelize-cli": "^6.6.1"
   }
 }
