--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Siddharth",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "memory": "^0.0.3",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
