--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Siddharth",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
